fix: fix condition null checking